[project]
name = "alphavantage-mcp-server"
version = "0.1.0"
description = "AlphaVantage MCP Server for market data and analysis"
authors = [
    {name = "Chris Lawcock", email = "lawcockc@onyxrd.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mcp>=1.0.0",
    "alpha-vantage>=3.0.0,<4.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "httpx>=0.25.0,<1.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
alphavantage-mcp-server = "alphavantage_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alphavantage_mcp", "shared"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
